--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9",
-    "react-timer-mixin": "^0.13.4"
+    "react-timer-mixin": "^0.13.4",
+    "styled-components": "^4.1.3",
+    "styled-react-native": "^1.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
