--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "expo-cli": "^2.11.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-css-gradient": "^0.3.1",
     "react-navigation": "^3.0.9",
     "react-timer-mixin": "^0.13.4",
     "styled-components": "^4.1.3",
